horizontal scrolling fixed

--- a/app/assets/stylesheets/components/_hero.scss
+++ b/app/assets/stylesheets/components/_hero.scss
@@ -2,6 +2,7 @@
     /* Sizing */
     width: 100vw;
     height: calc(100vh - 60px);
+    max-width: 100%;
     /* Flexbox stuff */
     display: flex;
     justify-content: center;
